<resources>
    <string name="app_name">TaniCare</string>
    <string name="hello_world_brow">Hello World! Brow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="classification_title">klasifikasi</string>
    <string name="btn_padi">padi</string>
    <string name="btn_kentang">kentang</string>
    <string name="tomat">tomato</string>
    <string name="btn_ketela">ketela pohon</string>
    <string name="btn_jagung">jagung</string>
    <string name="klasifikasi_penyakit">Klasifikasi Penyakit</string>
    <string name="prediksi_penyakit">Prediksi Penyakit</string>
    <string name="lorem_ipsum">deskripsi</string>
    <string name="penyakit_kresek">nama penyakit</string>
    <string name="petani">Petani</string>
    <string name="welcome_word">Welcome To TaniCare</string>
    <string name="next">Next</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce bibendum eleifend semper.</string>
    <string name="about">About</string>
    <string name="gender">Male</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="Name">Karsiman</string>
    <string name="gender_text">Gender</string>
    <string name="location_text">Rungkut, Surabaya</string>
    <string name="save_thread">Save Thread</string>
    <string name="comment_text">Type Your Comment Here</string>
    <string name="predict_weather">Predict Weather</string>
    <string name="feature">Feature</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="search_location">Search Location</string>
    <string name="welcome_profile">Welcome Karsiman</string>
    <string name="prediksi_cuaca">Prediksi Cuaca</string>
    <string name="thread">Thread</string>
    <string name="see_all">See All</string>
    <string name="clock">08:30 am</string>
    <string name="text_thread">Hasil Disini Memuaskan Sekali Panennya...</string>
    <string name="post_image">Post Image</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="number">10</string>
    <string name="save">Save</string>
    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="cek_penyakit">Cek Penyakit</string>
    <string name="text_credential">Use Credentials to access your account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="signup_text">Don\'t have an account? Signup</string>
    <string name="onboarding_text">Smart Farmer\'s Friend for quality harvests, TaniCare is a modern solution to support every step of your farming.</string>
    <string name="penyakit_cek">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Fusce bibendum eleifend\nsemper. Maecenas sit amet lectus\nefficitur, ornare mauris sed, porttitor velit.\nEtiam nec purus justo.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_text">Already have an account? Log in here!</string>
    <string name="create_new_post">Create New Post</string>
    <string name="now">now</string>
    <string name="time">now</string>
    <string name="write_caption">Write a caption for thread...</string>
    <string name="add_location">Add Location</string>
    <string name="posting">Posting</string>
</resources>
