<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Back Button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Klasifikasi Penyakit"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Classification Options -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner"
        android:clipToOutline="true"
        android:contentDescription="@string/classification_title"
        android:scaleType="centerCrop"
        android:src="@drawable/sample" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/accent"
            android:text="@string/btn_padi"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/accent"
            android:text="@string/btn_jagung"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/accent"
            android:text="@string/btn_ketela"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/accent"
            android:text="@string/tomat"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/btn_kentang"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
