<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/colorBackground">

    <!-- Title -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prediksi_penyakit"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"/>

    <!-- Box untuk tambah gambar -->
    <RelativeLayout
        android:id="@+id/image_insert"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginBottom="32dp"
        android:clipToOutline="true"
        android:gravity="center"
        android:outlineProvider="background"
        tools:targetApi="s">

        <!-- ImageView yang akan diganti dengan gambar besar -->
        <ImageView
            android:id="@+id/iconPlus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_add"
            app:tint="?android:attr/textColorPrimary"
            android:contentDescription="@string/tambah_gambar" />

        <!-- ImageView besar untuk menampilkan gambar yang dipilih -->
        <ImageView
            android:id="@+id/selectedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            android:contentDescription="Selected Photo" />
    </RelativeLayout>


    <!-- Button Cek Penyakit -->
    <Button
        android:id="@+id/btnCekPenyakit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:text="@string/cek_penyakit"
        android:clipToOutline="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:elevation="2dp"
        tools:targetApi="s" />

</LinearLayout>
